package pt.isep.enorm.ref.domain;

/*Generated by MPS */

import jakarta.persistence.Entity;
import jakarta.persistence.Table;
import pt.isep.enorm.ref.domain.generated.GeneratedUserType;
import org.springframework.security.core.userdetails.UserDetails;
import com.fasterxml.jackson.annotation.JsonIgnore;
import java.util.Collection;
import org.springframework.security.core.GrantedAuthority;
import pt.isep.enorm.ref.domain.enums.UserKind;
import java.util.List;
import org.springframework.security.core.authority.SimpleGrantedAuthority;

@Entity(name = "User")
@Table(name = "users")
public class UserType extends GeneratedUserType implements UserDetails {
  @JsonIgnore
  @Override
  public Collection<? extends GrantedAuthority> getAuthorities() {
    UserKind role = getRole();
    if (role == UserKind.BUYER) {
      return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()), new SimpleGrantedAuthority("ROLE_" + UserKind.GENERIC.name()));
    }
    return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
  }

  @JsonIgnore
  @Override
  public boolean isAccountNonExpired() {
    return true;
  }

  @JsonIgnore
  @Override
  public boolean isAccountNonLocked() {
    return true;
  }

  @JsonIgnore
  @Override
  public boolean isCredentialsNonExpired() {
    return true;
  }

  @JsonIgnore
  @Override
  public boolean isEnabled() {
    return true;
  }
}
