@startuml
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 60
skinparam roundCorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor White
    BorderColor #2D3E50
    ArrowColor #5D6D7E
    FontSize 12
}

title Domain Model – Amazon Scenario\nProduct Evaluation and User Feedback


package "Identity & Users" {
    class User {
        id: String
        name: String
        email: String
    }
    class Buyer
    class Seller
    class VerificationProcess {
        id: String
        type: AUTOMATIC | MANUAL
        status: PENDING | APPROVED | REJECTED
        timestamp: Date
    }
}

package "Catalog & Sales" {
    class Product {
        id: String
        name: String
        description: String
    }
    class Order {
        id: String
        date: Date
    }
    class OrderItem {
        quantity: Integer
    }
}

package "Feedback System" {
    class ProductReview {
        id: String
        rating: Integer
        text: String
        creationDate: Date
        verifiedPurchase: Boolean
    }
    class MediaAttachment {
        id: String
        type: PHOTO | VIDEO
        url: String
    }
}

User <|-- Buyer
User <|-- Seller

Buyer "1" -- "*" Order : places >
Order "1" -- "*" OrderItem : contains >
OrderItem "*" -- "1" Product : product >
Seller "1" -- "*" Product : sells >

User "1" -right-> "*" ProductReview : author
Product "1" -right-> "*" ProductReview : receives
ProductReview "1" -down-> "*" MediaAttachment : attachments

ProductReview "*" -left-> "1" Product : about

ProductReview "0..1" -down-> "1" VerificationProcess : verification
VerificationProcess "0..1" -up-> "1" User : moderator

@enduml